[package]
name = "secure_link_windows_service"
version = "0.1.0"
edition = "2024"

[features]
load_dev_certs = ["secure_link_client/load_dev_certs"]

[dependencies]
secure_link_client = {git = "https://github.com/4ait/secure_link_client" }
windows-service = "0.8.0"
tokio = { version = "1.0", features = ["full"] }
winreg = "0.55.0"
log = "0.4.27"
simple-log = "2.3.0"
clap = { version = "4.5.39", features = ["derive"] }